--- a/colibri_aiv/CMakeLists.txt
+++ b/colibri_aiv/CMakeLists.txt
@@ -19,8 +19,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
  add_message_files(
    FILES
-   ultrasonic.msg
-   collision.msg
+   Ultrasonic.msg
+   Bumper.msg
  )
 
 ## Generate added messages and services with any dependencies listed here
