--- a/colibri_aiv/package.xml
+++ b/colibri_aiv/package.xml
@@ -4,7 +4,7 @@
   <version>1.0.0</version>
   <description>The colibri_aiv package</description>
 
-  <maintainer email="wwang@colibri.com.cn">shevchenco</maintainer>
+  <maintainer email="1007380426@qq.com">shevchenco</maintainer>
 
   <license>BSD</license>
 
