--- a/colibri_nav/maps/fac.yaml
+++ b/colibri_nav/maps/fac.yaml
@@ -1,6 +1,6 @@
-image: 170102.pgm
+image: fac.pgm
 resolution: 0.050000
-origin: [-8.194350, -21.381282, 0.000000]
+origin: [-3.990573, -38.502907, 0.000000]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
