--- a/colibri_nav/maps/office602.yaml
+++ b/colibri_nav/maps/office602.yaml
@@ -1,6 +1,6 @@
-image: 215.pgm
+image: office602.pgm
 resolution: 0.050000
-origin: [-8.335160, -5.011139, 0.000000]
+origin: [-9.280747, -6.788465, 0.000000]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
