replace nav map; modify the filter factor ; comment dbg info in CMakeList.txt; decrease the turn angular vel

--- a/colibri_avoidence/CMakeLists.txt
+++ b/colibri_avoidence/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(colibri_avoidence)
 
-set (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS}  -g ")
-set (CMAKE_VERBOSE_MAKEFILE ON)
+#set (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS}  -g ")
+#set (CMAKE_VERBOSE_MAKEFILE ON)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
