--- a/colibri_msgs/CMakeLists.txt
+++ b/colibri_msgs/CMakeLists.txt
@@ -37,6 +37,7 @@ find_package(catkin REQUIRED COMPONENTS
    EnvSecurity.msg
    RobotState.msg
    SafeVel.msg
+   AuxInfo.msg
  )
 
 ## Generate services in the 'srv' folder
