--- a/colibri_screen/package.xml
+++ b/colibri_screen/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>aiv_monitor</name>
+  <name>colibri_screen</name>
   <version>0.0.0</version>
-  <description>The aiv_monitor package</description>
+  <description>The colibri_screen package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
