add the new NavState.msg and add the aux init

--- a/colibri_msgs/CMakeLists.txt
+++ b/colibri_msgs/CMakeLists.txt
@@ -39,6 +39,7 @@ find_package(catkin REQUIRED COMPONENTS
    SafeVel.msg
    AuxInfo.msg
    Ipc.msg
+   NavState.msg
  )
 
 ## Generate services in the 'srv' folder
