--- a/colibri_pathfinding/CMakeLists.txt
+++ b/colibri_pathfinding/CMakeLists.txt
@@ -4,6 +4,9 @@ project(colibri_pathfinding)
 ## Add support for C++11, supported in ROS Kinetic and newer
 # add_definitions(-std=c++11)
 
+set (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS}  -g ")
+set (CMAKE_VERBOSE_MAKEFILE ON)
+
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
