add a argv input and yaml-cpp lib to parse the map origin and add a gdbed launch file to load argv and rosparam yaml

--- a/colibri_pathfinding/CMakeLists.txt
+++ b/colibri_pathfinding/CMakeLists.txt
@@ -19,6 +19,12 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
 )
 
+find_package(PkgConfig) 
+pkg_check_modules(NEW_YAMLCPP yaml-cpp>=0.5) 
+if(NEW_YAMLCPP_FOUND)
+  add_definitions(-DHAVE_NEW_YAMLCPP) 
+endif(NEW_YAMLCPP_FOUND)
+
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
 
@@ -148,11 +154,11 @@ add_executable(rounting_node src/rounting.cpp src/MapSearch.cpp)
 target_link_libraries(rounting_node ${catkin_LIBRARIES})
 
 
-add_executable(modular_path_node src/simple_fp.cpp src/MapSearch.cpp src/map_proc.cpp)
-target_link_libraries(modular_path_node ${catkin_LIBRARIES})
+#add_executable(modular_path_node src/simple_fp.cpp src/MapSearch.cpp src/map_proc.cpp)
+#target_link_libraries(modular_path_node ${catkin_LIBRARIES})
 
 add_executable(fp_srv_node src/fp_srv.cpp src/MapSearch.cpp src/map_proc.cpp)
-target_link_libraries(fp_srv_node ${catkin_LIBRARIES})
+target_link_libraries(fp_srv_node yaml-cpp ${catkin_LIBRARIES})
 
 
 ## Declare a C++ library
