--- a/colibri_msgs/CMakeLists.txt
+++ b/colibri_msgs/CMakeLists.txt
@@ -41,6 +41,7 @@ find_package(catkin REQUIRED COMPONENTS
    Ipc.msg
    NavState.msg
    Coordinator.msg
+   Node.msg
  )
 
 ## Generate services in the 'srv' folder
