--- a/colibri_crabnav/CMakeLists.txt
+++ b/colibri_crabnav/CMakeLists.txt
@@ -85,6 +85,11 @@ INCLUDE_DIRECTORIES(include/colibri_crabnav/)
    ${catkin_LIBRARIES}
  )
 
+ add_executable(crab_safe_node src/safe_node.cpp src/protect.cpp )
+ target_link_libraries(crab_safe_node
+   ${catkin_LIBRARIES}
+ )
+
  add_executable(nav_mult_rvizgoal src/nav_to_multipoint.cpp src/task_mgr.cpp src/global_planner.cpp src/colibri_action.cpp src/colibri_local_nav.cpp 
     src/colibri_ca.cpp src/PID_controller.cpp src/nav_node_proc.cpp)
  target_link_libraries(nav_mult_rvizgoal yaml-cpp
