add three vel level for aiv go straightly and add the cpp/py pub nav_state test and hostpc commubication node

--- a/colibri_tmpdbg/CMakeLists.txt
+++ b/colibri_tmpdbg/CMakeLists.txt
@@ -50,3 +50,13 @@ add_executable(pub_constvel src/pub_constvel.cpp)
    ${catkin_LIBRARIES}
  )
  
+add_executable(pub_nav_state src/pub_nav_state.cpp)
+  
+ target_link_libraries(pub_nav_state
+   ${catkin_LIBRARIES}
+ )
+
+
+
+
+
